--- a/discord-indexer.csproj
+++ b/discord-indexer.csproj
@@ -12,4 +12,7 @@
     <PackageReference Include="MongoDB.Driver" Version="2.25.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Include="DiscordRateLimiter.cs" />
+  </ItemGroup>
 </Project>
