Revert "ci/installer: ship discord-indexer-curl in releases and install it"
This reverts commit 8598edb2f53cf152652100e4144279295177338f.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,18 +30,16 @@ jobs:
             -p:PublishTrimmed=false
           chmod +x out/discord-indexer
 
-          # Include helper CLI scripts in the release artifacts
+          # Include helper CLI script in the release artifacts
           cp -v ./discord-indexer-search out/discord-indexer-search
           chmod +x out/discord-indexer-search
-          cp -v ./discord-indexer-curl out/discord-indexer-curl
-          chmod +x out/discord-indexer-curl
 
       - name: Package
         run: |
           set -euo pipefail
           cd out
-          sha256sum discord-indexer discord-indexer-search discord-indexer-curl > discord-indexer-linux-x64.sha256
-          tar -czf discord-indexer-linux-x64.tar.gz discord-indexer discord-indexer-search discord-indexer-curl discord-indexer-linux-x64.sha256
+          sha256sum discord-indexer discord-indexer-search > discord-indexer-linux-x64.sha256
+          tar -czf discord-indexer-linux-x64.tar.gz discord-indexer discord-indexer-search discord-indexer-linux-x64.sha256
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
